# Bangla-Calendar

./: .env.example  .gitignore  docker-compose.override.yml  docker-compose.yml
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: calendar.py  festivals.py  islamic.py  panchanga.py
backend/app/api/v1/schemas/: calendar.py
backend/app/core/: interfaces.py
backend/app/core/astronomy/: swisseph_provider.py
backend/app/core/cache/: redis_cache.py
backend/app/core/calendars/: bangladesh.py  hijri.py  julian_day.py  registry.py  west_bengal.py
backend/app/core/db/: session.py
backend/app/core/db/models/: astronomical.py
backend/app/core/festivals/: resolver.py
backend/app/core/festivals/rules/: buddhist.yaml  christian.yaml  civic.yaml  hindu.yaml  muslim.yaml
backend/app/core/locale/: names_bd.py  names_hijri.py  names_panchanga.py  names_wb.py  numerals.py
backend/app/core/panchanga/: engine.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_bd_calendar.py  test_hijri.py  test_numerals.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/i18n/: bn.ts  en.ts
frontend/src/store/: calendarStore.ts  locationStore.ts
frontend/src/utils/: banglaNumeral.ts  festivalColors.ts
(+13 files in other folders)
